Pankaj | Fixed spacing in dashboard page

--- a/ui/app/styles/clinical/_patientDashboard.scss
+++ b/ui/app/styles/clinical/_patientDashboard.scss
@@ -227,11 +227,11 @@
   }
 }
 
-.patient-dashboard.visit {padding: 0; margin-top: 65px}
+.patient-dashboard.visit {padding: 0; margin-top: 45px}
 .dashboard-visit-summary {padding: 10px;}
 .dashboard-header {
   width: 100%;
-  height: 45px;
+  height: 52px;
   background: $bahmniSecondaryColor;
   h5 {
     margin: 15px 0;
